--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "cookie-parser": "^1.4.3",
     "ejs": "^2.4.2",
     "express": "^4.14.0",
+    "mongoose": "^4.5.3",
     "morgan": "^1.7.0",
     "path": "^0.12.7"
   }
