--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^2.0.0",
     "ejs": "^2.4.2",
     "express": "^4.14.0",
+    "express-jwt": "^5.0.0",
     "jsonwebtoken": "^7.1.9",
     "mongoose": "^4.5.3",
     "morgan": "^1.7.0",
