--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A site for storing and commenting on linked images.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "node app.js"
   },
   "repository": {
@@ -36,6 +36,7 @@
   },
   "devDependencies": {
     "chai": "^3.2.0",
-    "chai-http": "^1.0.0"
+    "chai-http": "^1.0.0",
+    "mocha": "^3.2.0"
   }
 }
